# mkpass

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
src/: main.rs
