[package]
authors = ["Trayvon Pan <seekincs@gmail.com>"]
categories = ["command-line-utilities", "cryptography"]
description = "Command line tool to generate passwords"
documentation = "https://docs.rs/mkpass/"
edition = "2021"
keywords = ["password", "generator", "commandline"]
license = "MIT"
name = "mkpass"
readme = "README.md"
repository = "https://github.com/seekincs/mkpass/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.23", features = ["derive"]}
rand = "0.8.5"
